Fix some left nav spacing

--- a/server/fishtest/static/css/application.css
+++ b/server/fishtest/static/css/application.css
@@ -27,6 +27,28 @@ body {
   margin-right: 0;
 }
 
+/** Left navigation */
+.nav-list {
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-bottom: 0;
+}
+
+.nav-header {
+  font-size: 11px;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-bottom: 3px;
+}
+
+.nav li + .nav-header {
+  margin-top: 12px;
+}
+
+.nav li a {
+  display: block;
+}
+
 th {
   cursor: pointer;
 }
